stylus: fix alignment of the discord inputbox

--- a/stylus/discord.css
+++ b/stylus/discord.css
@@ -290,3 +290,8 @@
 	> div:nth-child(2) {
 	display: none;
 }
+
+/* text holder in inputbox */
+.fontSize16Padding__48818 {
+	padding-top: 8px;
+}
